--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 This file was created by IntelliJ IDEA 12.1.6 for binding GitHub repository
+![CodeCov](https://img.shields.io/badge/Coverage-%-brightgreen>)
