--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 This file was created by IntelliJ IDEA 12.1.6 for binding GitHub repository
-[CodeCov](https://img.shields.io/codecov/c/github/Nico-Rahm/SWE-Refactoring)
+![CodeCov](https://img.shields.io/codecov/c/github/Nico-Rahm/SWE-Refactoring)
